// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package Managers > bun workspace --linker=hoisted - multiple conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=hoisted - multiple conflicting versions 2`] = `
{
  "files": {
    "index.js": {
      "offset": "31271",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": "0",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "139",
              "size": "@size",
            },
            "index.js": {
              "offset": "1210",
              "size": "@size",
            },
            "package.json": {
              "offset": "1584",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "2750",
              "size": "@size",
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": "2873",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "3012",
              "size": "@size",
            },
            "index.js": {
              "offset": "4083",
              "size": "@size",
            },
            "package.json": {
              "offset": "4927",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "6324",
              "size": "@size",
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": "6438",
              "size": "@size",
            },
            "index.js": {
              "offset": "6940",
              "size": "@size",
            },
            "package.json": {
              "offset": "8409",
              "size": "@size",
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": "8875",
                  "size": "@size",
                },
                "es6Repeat.js": {
                  "offset": "9116",
                  "size": "@size",
                },
                "perf.js": {
                  "offset": "9332",
                  "size": "@size",
                },
              },
            },
            "test.js": {
              "offset": "10774",
              "size": "@size",
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": "14779",
              "size": "@size",
            },
            "index.js": {
              "offset": "14803",
              "size": "@size",
            },
            "node_modules": {
              "files": {
                "is-bigint": {
                  "files": {
                    ".eslintignore": {
                      "offset": "14988",
                      "size": "@size",
                    },
                    ".nycrc": {
                      "offset": "14998",
                      "size": "@size",
                    },
                    "LICENSE": {
                      "offset": "15137",
                      "size": "@size",
                    },
                    "index.js": {
                      "offset": "16208",
                      "size": "@size",
                    },
                    "package.json": {
                      "offset": "16945",
                      "size": "@size",
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": "14849",
              "size": "@size",
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": "17900",
              "size": "@size",
            },
            "browser.js": {
              "offset": "18998",
              "size": "@size",
            },
            "index.js": {
              "offset": "24416",
              "size": "@size",
            },
            "package.json": {
              "offset": "24512",
              "size": "@size",
            },
            "test.js": {
              "offset": "24961",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "31303",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=hoisted 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=hoisted 2`] = `
{
  "files": {
    "index.js": {
      "offset": "28333",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": "0",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "139",
              "size": "@size",
            },
            "index.js": {
              "offset": "1210",
              "size": "@size",
            },
            "package.json": {
              "offset": "1584",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "2750",
              "size": "@size",
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": "2873",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "3012",
              "size": "@size",
            },
            "index.js": {
              "offset": "4083",
              "size": "@size",
            },
            "package.json": {
              "offset": "4927",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "6324",
              "size": "@size",
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": "6438",
              "size": "@size",
            },
            "index.js": {
              "offset": "6940",
              "size": "@size",
            },
            "package.json": {
              "offset": "8409",
              "size": "@size",
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": "8875",
                  "size": "@size",
                },
                "es6Repeat.js": {
                  "offset": "9116",
                  "size": "@size",
                },
                "perf.js": {
                  "offset": "9332",
                  "size": "@size",
                },
              },
            },
            "test.js": {
              "offset": "10774",
              "size": "@size",
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": "14779",
              "size": "@size",
            },
            "index.js": {
              "offset": "14803",
              "size": "@size",
            },
            "package.json": {
              "offset": "14849",
              "size": "@size",
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": "14962",
              "size": "@size",
            },
            "browser.js": {
              "offset": "16060",
              "size": "@size",
            },
            "index.js": {
              "offset": "21478",
              "size": "@size",
            },
            "package.json": {
              "offset": "21574",
              "size": "@size",
            },
            "test.js": {
              "offset": "22023",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28365",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=isolated - multiple conflicting versions 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=isolated - multiple conflicting versions 2`] = `
{
  "files": {
    "index.js": {
      "offset": "31271",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": "0",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "139",
              "size": "@size",
            },
            "index.js": {
              "offset": "1210",
              "size": "@size",
            },
            "package.json": {
              "offset": "1584",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "2750",
              "size": "@size",
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": "2873",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "3012",
              "size": "@size",
            },
            "index.js": {
              "offset": "4083",
              "size": "@size",
            },
            "package.json": {
              "offset": "4927",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "6324",
              "size": "@size",
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": "6438",
              "size": "@size",
            },
            "index.js": {
              "offset": "6940",
              "size": "@size",
            },
            "package.json": {
              "offset": "8409",
              "size": "@size",
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": "8875",
                  "size": "@size",
                },
                "es6Repeat.js": {
                  "offset": "9116",
                  "size": "@size",
                },
                "perf.js": {
                  "offset": "9332",
                  "size": "@size",
                },
              },
            },
            "test.js": {
              "offset": "10774",
              "size": "@size",
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": "14779",
              "size": "@size",
            },
            "index.js": {
              "offset": "14803",
              "size": "@size",
            },
            "node_modules": {
              "files": {
                "is-bigint": {
                  "files": {
                    ".eslintignore": {
                      "offset": "14988",
                      "size": "@size",
                    },
                    ".nycrc": {
                      "offset": "14998",
                      "size": "@size",
                    },
                    "LICENSE": {
                      "offset": "15137",
                      "size": "@size",
                    },
                    "index.js": {
                      "offset": "16208",
                      "size": "@size",
                    },
                    "package.json": {
                      "offset": "16945",
                      "size": "@size",
                    },
                  },
                },
              },
            },
            "package.json": {
              "offset": "14849",
              "size": "@size",
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": "17900",
              "size": "@size",
            },
            "browser.js": {
              "offset": "18998",
              "size": "@size",
            },
            "index.js": {
              "offset": "24416",
              "size": "@size",
            },
            "package.json": {
              "offset": "24512",
              "size": "@size",
            },
            "test.js": {
              "offset": "24961",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "31303",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > bun workspace --linker=isolated 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > bun workspace --linker=isolated 2`] = `
{
  "files": {
    "index.js": {
      "offset": "28333",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "has-bigints": {
          "files": {
            ".nycrc": {
              "offset": "0",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "139",
              "size": "@size",
            },
            "index.js": {
              "offset": "1210",
              "size": "@size",
            },
            "package.json": {
              "offset": "1584",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "2750",
              "size": "@size",
            },
          },
        },
        "is-bigint": {
          "files": {
            ".nycrc": {
              "offset": "2873",
              "size": "@size",
            },
            "LICENSE": {
              "offset": "3012",
              "size": "@size",
            },
            "index.js": {
              "offset": "4083",
              "size": "@size",
            },
            "package.json": {
              "offset": "4927",
              "size": "@size",
            },
            "tsconfig.json": {
              "offset": "6324",
              "size": "@size",
            },
          },
        },
        "left-pad": {
          "files": {
            "COPYING": {
              "offset": "6438",
              "size": "@size",
            },
            "index.js": {
              "offset": "6940",
              "size": "@size",
            },
            "package.json": {
              "offset": "8409",
              "size": "@size",
            },
            "perf": {
              "files": {
                "O(n).js": {
                  "offset": "8875",
                  "size": "@size",
                },
                "es6Repeat.js": {
                  "offset": "9116",
                  "size": "@size",
                },
                "perf.js": {
                  "offset": "9332",
                  "size": "@size",
                },
              },
            },
            "test.js": {
              "offset": "10774",
              "size": "@size",
            },
          },
        },
        "lib": {
          "files": {
            ".yarnrc.yml": {
              "offset": "14779",
              "size": "@size",
            },
            "index.js": {
              "offset": "14803",
              "size": "@size",
            },
            "package.json": {
              "offset": "14849",
              "size": "@size",
            },
          },
        },
        "process": {
          "files": {
            "LICENSE": {
              "offset": "14962",
              "size": "@size",
            },
            "browser.js": {
              "offset": "16060",
              "size": "@size",
            },
            "index.js": {
              "offset": "21478",
              "size": "@size",
            },
            "package.json": {
              "offset": "21574",
              "size": "@size",
            },
            "test.js": {
              "offset": "22023",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28365",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > local file:// protocol with npm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with pnpm for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with traversal for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with yarn for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > local file:// protocol with yarn-berry for project outside workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > npm 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > npm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": "24709",
              "size": "@size",
            },
          },
        },
        "readme.md": {
          "offset": "24741",
          "size": "@size",
        },
      },
    },
    "index.html": {
      "offset": "24819",
      "size": "@size",
    },
    "index.js": {
      "offset": "25660",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "29844",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > pnpm 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > pnpm 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": "24709",
              "size": "@size",
            },
          },
        },
        "readme.md": {
          "offset": "24741",
          "size": "@size",
        },
      },
    },
    "index.html": {
      "offset": "24819",
      "size": "@size",
    },
    "index.js": {
      "offset": "25660",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "29844",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > traversal hoisted 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal hoisted 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25087",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "25706",
      "size": "@size",
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": "26013",
          "size": "@size",
        },
      },
    },
  },
}
`;

exports[`Package Managers > traversal multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25550",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28051",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > traversal workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > traversal workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25550",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28051",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > yarn 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25087",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "25706",
      "size": "@size",
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": "26045",
          "size": "@size",
        },
      },
    },
  },
}
`;

exports[`Package Managers > yarn berry 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25087",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "25706",
      "size": "@size",
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": "26013",
          "size": "@size",
        },
      },
    },
  },
}
`;

exports[`Package Managers > yarn berry multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25550",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28051",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > yarn berry workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn berry workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25550",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28051",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > yarn multi-package workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn multi-package workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25550",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28051",
      "size": "@size",
    },
  },
}
`;

exports[`Package Managers > yarn workspace 1`] = `
{
  "linux": [],
}
`;

exports[`Package Managers > yarn workspace 2`] = `
{
  "files": {
    "index.html": {
      "offset": "24709",
      "size": "@size",
    },
    "index.js": {
      "offset": "25550",
      "size": "@size",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "offset": "0",
              "size": "@size",
            },
            "package.json": {
              "offset": "1139",
              "size": "@size",
            },
            "src": {
              "files": {
                "browser.js": {
                  "offset": "2049",
                  "size": "@size",
                },
                "common.js": {
                  "offset": "8152",
                  "size": "@size",
                },
                "index.js": {
                  "offset": "15067",
                  "size": "@size",
                },
                "node.js": {
                  "offset": "15381",
                  "size": "@size",
                },
              },
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "offset": "20109",
              "size": "@size",
            },
            "license.md": {
              "offset": "23133",
              "size": "@size",
            },
            "package.json": {
              "offset": "24212",
              "size": "@size",
            },
          },
        },
      },
    },
    "package.json": {
      "offset": "28051",
      "size": "@size",
    },
  },
}
`;
